<?xml version="1.0"?>
<package format="3">
  <name>lockfree</name>
  <version>1.0.25</version>
  <description>The lockfree package contains lock-free data structures for use in multithreaded programming.  These
     kinds of data structures are generally not as easy to use as single-threaded equivalents, and are not
     always faster.  If you don't know you need to use one, try another structure with a lock around it
     first.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/lockfree</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Josh Faust</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <depend>rosatomic</depend>
  <depend>allocators</depend>

  <!-- Dependencies needed only for running tests. -->
  <test_depend>GTest</test_depend>

<export>
    <build_type>ament_cmake</build_type>
</export>

</package>

