<?xml version="1.0"?>
<package format="3">
  <name>rosatomic</name>
  <version>1.0.25</version>
  <description>rosatomic provides the C++11-style atomic operations by pulling symbols from the proposed Boost.Atomic
     package into the ros namespace.  Once C++11-style atomics (std::atomic) are available from compilers, rosatomic will
     conditionally use those instead.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>
  <license>Boost</license>

  <url type="website">http://ros.org/wiki/rosatomic</url>
  <author>Josh Faust</author>

    <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <depend>boost</depend>

  <!-- Dependencies needed only for running tests. -->
  <test_depend>GTest</test_depend>

<export>
    <build_type>ament_cmake</build_type>
</export>

</package>

